faq-accordion-card-main/style.css
@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');


:root {
    /*
        primary color
    */

    /* text */

    --primary-text-color-01: #1d1e35; 
    --primary-text-color-02: #f47c57;

    /* neutral color */

    --neutral-text-color-01: #4a4b5e; 
    --neutral-text-color-02: #787887; 

    /* divider color */

    --divider-color: #e7e7e9; 

    box-sizing: inherit;
}

*, *::before, *::after {
    box-sizing: border-box;
}

body {
    font-size: 0.75rem; /* 12 / 16 */
    font-family: 'Kumbh Sans', sans-serif;
}

main {
    display: flex;
    width: 100vw;
    min-height: 100vh;
    background-image: linear-gradient(to bottom,
                    hsl(273, 75%, 66%),hsl(240, 73%, 65%));
}



/*

------------- faq card styling --------------

*/
.faq {
    width: 100vw;
    height: 100vh;
}

.faq-card {
    position: relative;
    width: 87.2%; /* 327 / 375 */
    max-width: 55em; /* 920 / 12 */

    padding: 11em 2em 4em; /* 24 / 12   |   48 / 12 */
    margin-top: 12.333333333em; /* 148 / 12 */

    border-radius: 1.916666667em; /* 23 / 12 */

    background-color: white;
    background-image: url(./images/bg-pattern-mobile.svg);
    background-repeat: no-repeat;
    background-position: top center;

    box-shadow: 0px 4.166666667em 4.166666667em -1.666666667em rgba(53, 18, 122, 0.50); /* 50 / 12 | 20 / 12 */
}

.faq-card__media {
    width: 19.75em; /* 237 / 12 */
    min-height: 15em; /* 180 / 12 */

    transform: translate(-50%);

    position: absolute;
    top: -9em; /* 108 / 12 */
    left: 50%;
    
    background: url(./images/illustration-woman-online-mobile.svg) no-repeat;
}

.faq-card__media__box {
    display: none;
}

.faq-card__content__title {
    font-size: 2rem; /* 32 / 16 */
    margin-block: 0 0.9375em; /* 30 / 32 */

    color: var(--primary-text-color-01);
    text-align: center;
    text-transform: uppercase;
}

.faq-card__list {
    list-style: none;
    padding: 0;
    margin: 0;
}

.faq-card__list > li {
    border-bottom: 1px solid var(--divider-color);
    padding-bottom: 1.25em; /* 15 / 12 */
}

.faq-card__list * + * {
    margin-top: 1.416666667em; /* 17 / 12 */
}

.faq-card__list__question {
    font-size: 0.8125rem; /* 13 / 16 */
    color: var(--neutral-text-color-01);
    font-weight: 400;
    margin-block: 0;

    cursor: pointer;

    transition: color 165ms ease-in-out;
}

.faq-card__list__question:hover {
    color: var(--primary-text-color-02);
}

.faq-card__list__question:active {
    color: var(--primary-text-color-01);
}

.faq-card__list__question__toggle-icon {
    float: right;
    margin-top: -3px;
}

.faq-card__list__anwser {
    display: none;
    color: var(--neutral-text-color-02);
    margin-block: 0.916666667em 0; /* 11 / 12 */
}


@media screen and (min-width: 59.3125em) {
    .faq {
        display: flex;
        justify-content: center;
        align-items: flex-start;
    }

    .faq-card {
        display: grid;
        grid-template-columns: 42.173913% 48.3695652%; /* 388 / 920 | 445 / 920 */
        column-gap: 9.4565217%; /* 87 / 920 */

        max-width: 76.666666667em; /* 920 / 12 */
        margin-top: 10.75em; /* 129 / 12 */
        margin-left: 21px;

        padding: 0;
        
        background-image: unset;
    } 

    .faq-card__media {
        position: static;
        transform: unset;
        width: 100%;
        height: 100%;

        background: url(./images/illustration-woman-online-desktop.svg) no-repeat, 
                    url(./images/bg-pattern-desktop.svg) no-repeat;
        background-position: right center, right bottom 38%;
    }

    .faq-card__media__box {
        display: block;
        width: 7.5em; /* 90 / 12 */
        height: 16.666666667em; /* 200 / 12 */

        position: absolute;
        transform: translate(-50%);
        left: 2px;
        top: 40.4950884%; /* 206.12 / 509 */

        background: url(./images/illustration-box-desktop.svg) no-repeat;
        background-position: top;
    }


    .faq-card__content {
        width: 78.6516854%; /* 350 / 445 */
        padding: 5.416666667em 0 6.916666667em; /* 65 / 12  |   83 / 12 */
    }

    .faq-card__content__title {
        text-align: left;
        margin-bottom: 1.3125em; /* 42 / 32 */
    }

    .faq-card__list__question {
        font-size: 0.875rem; /* 14 / 16 */
    }

    .faq-card__list > li {
        padding-bottom: 1.5em; /* 18 / 12 */
    }
}

